# tungsten

./: .clang-format  .gitignore  Ast.cppm  CMakeLists.txt  LICENSE  Lexer.cppm  Parser.cppm  README.md  Token.cppm  Tokenizer.cppm  TranslationUnit.cppm  main.cpp  utils.cppm  utils.hpp
.github/workflows/: MacOS build.yml  Release.yml  Ubuntu build.yml  Windows Build  Windows Build.yml  flawfinder.yml  msvc.yml
src/: Ast.cppm  Lexer.cppm  Parser.cppm  Token.cppm  TranslationUnit.cppm  utils.cppm
src/core/: core.cpp
tpkg/: CMakeLists.txt
tpkg/src/: curl.cppm  main.cpp  package.cppm  progressBar.cppm
tungsten/: CMakeLists.txt
tungsten/src/: Ast.cppm  DebugInfo.cppm  Lexer.cppm  ModuleManager.cppm  Parser.cppm  SemanticAnalyzer.cppm  Token.cppm  TranslationUnit.cppm  compileOptions.cppm  main.cpp  utils.cppm
tungsten/src/core/: core.cpp
tungsten/src/stdlib/: builder.cpp  filesystem.cpp  filesystem.tgs  sourceLocation.tgs
